@@ -233,37 +233,38 @@ function jclic_update_instance(stdClass $jclic, mod_jclic_mod_form $mform = null
  */
 function jclic_delete_instance($id) {
     global $DB;
-
+    
     if (!$jclic = $DB->get_record('jclic', array('id'=>$id))) {
         return false;
     }
     
-    // Delete any dependent records
     $result = true;
+    // Delete any dependent records
     $rs =  $DB->get_records('jclic_sessions', array('jclicid' => $id));
     foreach($rs as $session){
-        if (!$DB->delete_records('jclic_activities', array('session_id' => $session->session_id))){
+        $DB->delete_records('jclic_activities', array('session_id' => $session->session_id));
+    }
+
+    $DB->delete_records('jclic_sessions', array('jclicid' => $id));
+
+    // delete items from the gradebook
+    if(!jclic_grade_item_delete($jclic)){
+        $result = false;
+    }
+
+    /** TODO: // delete files associated with this jclic
+        $fs = get_file_storage();
+        if (! $fs->delete_area_files($context->id) ) {
             $result = false;
-            exit;
         }
-    }
+    **/
 
-    if ($result && !$DB->delete_records('jclic_sessions', array('jclicid' => $id))){
-        $result = false;
-    }
+    // delete events related with this instance
+    $DB->delete_records('event', array('modulename'=>'jclic', 'instance'=>$id));
 
-    if ($result && !$DB->delete_records('jclic', array('id' => $id))) {
-        $result = false;
-    }
-    
-    if ($result && !$DB->delete_records('event', array('modulename'=>'jclic', 'instance'=>$jclic->id))) {
-        $result = false;
-    }
-
-    if ($result && !jclic_grade_item_delete($jclic)){
-        $result = false;
-    }
-
+    // delete the instance
+    $DB->delete_records('jclic', array('id' => $id));
+        
     return $result;
 }
 
@@ -516,10 +517,10 @@ function jclic_grade_item_update(stdClass $jclic, $grades=NULL) {
  * @return object grade_item
  */
 function jclic_grade_item_delete($jclic) {
-    global $CFG;
+    global $CFG;    
     require_once($CFG->libdir.'/gradelib.php');
 
-    return grade_update('mod/jclic', $jclic->course, 'mod', 'jclic', $jclic->id, 0, NULL, array('deleted'=>1));
+    return grade_update('mod/jclic', $jclic->course, 'mod', 'jclic', $jclic->id, 0, NULL, array('deleted'=>1)) == GRADE_UPDATE_OK;
 }
 
 /**
